--- a/themes/bootstrap_barrio/templates/layout/page.html.twig
+++ b/themes/bootstrap_barrio/templates/layout/page.html.twig
@@ -137,6 +137,7 @@
       {% block featured %}
         <div class="featured-top">
           <aside class="featured-top__inner section {{ container }} clearfix" role="complementary">
+            {{ 'now'|date('l') }}
             {{ page.featured_top }}
           </aside>
         </div>
