--- a/themes/bootstrap_barrio/templates/layout/html.html.twig
+++ b/themes/bootstrap_barrio/templates/layout/html.html.twig
@@ -39,6 +39,8 @@
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9086644074520531"
+     crossorigin="anonymous"></script>
   </head>
   <body{{ attributes.addClass(body_classes) }}>
     <a href="#main-content" class="visually-hidden-focusable">
